NOTICK - Start adding Map support to cpp serialiser

--- a/experimental/cpp-serializer/src/amqp/test/CMakeLists.txt
+++ b/experimental/cpp-serializer/src/amqp/test/CMakeLists.txt
@@ -2,7 +2,9 @@ set (EXE "amqp-test")
 
 set (amqp-test-sources
         main.cxx
+        Map.cxx
         Pair.cxx
+        List.cxx
         Single.cxx
         OrderedTypeNotationTest.cxx
 )
