--- a/experimental/cpp-serializer/src/amqp/test/CMakeLists.txt
+++ b/experimental/cpp-serializer/src/amqp/test/CMakeLists.txt
@@ -6,6 +6,7 @@ set (amqp-test-sources
         Pair.cxx
         List.cxx
         Single.cxx
+        TestUtils.cxx
         OrderedTypeNotationTest.cxx
 )
 
